--- a/src/app/components/layout/censor-job-post/censor-job-post.component.html
+++ b/src/app/components/layout/censor-job-post/censor-job-post.component.html
@@ -1,203 +1,78 @@
 <div id="page-wrapper">
-    <div class="header">
-      <h1 class="page-header">
-        Quản lý bài đăng
-      </h1>
-      <ol class="breadcrumb">
+  <div class="header">
+    <h1 class="page-header">
+      Quản lý phê duyệt bài đăng
+    </h1>
+    <!-- <ol class="breadcrumb">
         <li><a [routerLink]="['/sale-post']">Quản lý bài đăng</a></li>
         <li><a class="active">Phê duyệt bài đăng</a></li>
-      </ol>
-    </div>
-    <div id="page-inner">
-      <div class="row">
-          <div class="col-md-12">
-              <div class="panel panel-default">
-                  <div class="panel-body">
-                      <div class="col-sm-12">
-                          <hr>
-                          <div class="newpost-header">
-                              <div class="col-sm-8">
-                                  <label>Account:&nbsp;</label>
-                                  <span>adfs sadf ád</span>
-                                  &nbsp;&nbsp;
-                                  <label>Time Post:&nbsp;</label>
-                                  <span>asd fsadf sadfs a</span>
-                              </div>
-  
-                              <div class="clear-fix"></div>
-                             
-                              <div class="col-sm-4 text-right">
-                                  <button  type="button" class="btn btn-default">Phê duyệt</button>
-                                  &nbsp;
-                                  <button  type="button" class="btn btn-danger">Xóa</button>
-                                </div>
-                          </div>
-  
-                          <form class="form-horizontal">
-                            <!--review post-->
-                            <div class="review_post">
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Chuyên mục:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_cate">
-                                    asdf asdfsdaf ádf
-                                  </span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Tỉnh/Thành:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_area">asd asdf ádf</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Tiêu đề:</label>
-                                <div class="col-sm-9">
-                                  <span class="po_title">asdfadsf asd f</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Giá:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_price">SADFasdf sad</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Người liên hệ:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_fullname">qwer sdfasdf qwesadf sadf </span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Số di động:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_phone">1234v12 41243</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Địa chỉ:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_address">
-                                    adf asd fasdf asdf à asdf sad
-                                  </span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Nội dung:</label>
-                                <div class="col-sm-9">
-                                  <pre
-                                    class="content_format_pre">sdf asdf asdf asdf sdaf sadas </pre>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Hình ảnh:</label>
-                                <!-- <div class="col-sm-9">
-                                  <ul class="ul_pic">
-                                    <li *ngFor="let img of censorPost.imageDTOs" >
-                                      <img [src]="config.urlGetImage + img.imageName" [alt]="img.imageName"
-                                        width="100" height="100">
-                                    </li>
-                                  </ul>
-                                </div> -->
-                              </div>
-                            </div>
-                          </form>
-                      </div>
-                      <div class="col-sm-12">
-                        <hr>
-                        <div class="newpost-header">
-                            <div class="col-sm-8">
-                                <label>Account:&nbsp;</label>
-                                <span>adfs sadf ád</span>
-                                &nbsp;&nbsp;
-                                <label>Time Post:&nbsp;</label>
-                                <span>asd fsadf sadfs a</span>
-                            </div>
+      </ol> -->
+  </div>
+  <div id="page-inner">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="col-sm-12" *ngIf="jobPosts?.length == 0">
+              <h2 class="text-danger">KHÔNG CÓ BÀI ĐĂNG NÀO ĐANG CHỜ PHÊ DUYỆT</h2>
+            </div>
 
-                            <div class="clear-fix"></div>
-                           
-                            <div class="col-sm-4 text-right">
-                                <button  type="button" class="btn btn-info">Phê duyệt</button>
-                                &nbsp;
-                                <button  type="button" class="btn btn-danger">Từ chối</button>
-                              </div>
-                        </div>
+            <div class="col-sm-12" *ngFor="let jobPost of jobPosts">
+              <hr>
+              <div class="newpost-header">
+                <div class="col-sm-7 title-censor">
+                  <label>Tài khoản:&nbsp;&nbsp;</label>
+                  <span class="title">{{ jobPost?.employerResumeDTO?.accountDTO?.username }}</span>
+                  <br>
+                  <label>Thời gian đăng:&nbsp;&nbsp;</label>
+                  <span>{{ jobPost?.createPostTime | date: "dd/MM/yyyy" }}</span>
+                  <br>
+                  <label>Hạn nộp hồ sơ:&nbsp;&nbsp;</label>
+                  <span>{{ jobPost?.expirePostTime | date: "dd/MM/yyyy" }}</span>
+                </div>
 
-                        <form class="form-horizontal">
-                          <!--review post-->
-                          <div class="review_post">
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Chuyên mục:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_cate">
-                                  asdf asdfsdaf ádf
-                                </span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Tỉnh/Thành:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_area">asd asdf ádf</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Tiêu đề:</label>
-                              <div class="col-sm-9">
-                                <span class="po_title">asdfadsf asd f</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Giá:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_price">SADFasdf sad</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Người liên hệ:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_fullname">qwer sdfasdf qwesadf sadf </span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Số di động:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_phone">1234v12 41243</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Địa chỉ:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_address">
-                                  adf asd fasdf asdf à asdf sad
-                                </span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Nội dung:</label>
-                              <div class="col-sm-9">
-                                <pre
-                                  class="content_format_pre">sdf asdf asdf asdf sdaf sadas </pre>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Hình ảnh:</label>
-                              <!-- <div class="col-sm-9">
-                                <ul class="ul_pic">
-                                  <li *ngFor="let img of censorPost.imageDTOs" >
-                                    <img [src]="config.urlGetImage + img.imageName" [alt]="img.imageName"
-                                      width="100" height="100">
-                                  </li>
-                                </ul>
-                              </div> -->
-                            </div>
-                          </div>
-                        </form>
+                <div class="clear-fix"></div>
+
+                <div class="col-sm-5 text-right">
+                  <button type="button" class="btn btn-default" (click)="viewDetail(jobPost)">Xem chi tiết</button>
+                  &nbsp;
+                  <button type="button" class="btn btn-info" (click)="accept(jobPost?.jobPostId)">Phê duyệt</button>
+                  &nbsp;
+                  <button type="button" class="btn btn-danger" (click)="deny(jobPost?.jobPostId)">Từ chối</button>
+                </div>
+              </div>
+
+              <div class="col-sm-12">
+                <!--review post-->
+                <div class="section-header">
+                  <div class="title-apply-line">
+                    <h2 class="title" style="color: #478ea2;">{{ jobPost?.jobTitle }}</h2>
+                    <div class="clearfix"></div>
+                  </div>
+                </div>
+
+                <div class="section-body">
+                  <div class="job_description">
+                    <div class="title-apply-line">
+                      <h3 class="title-item">Mô tả công việc</h3>
+                      <div class="clearfix"></div>
+                    </div>
+                    <div [id]="'job_description_'+jobPost?.jobPostId">
+                      {{ viewRequirePost(jobPost) }}
                     </div>
                   </div>
+                  <div class="skills_experience">
+                    <h3 class="title-item">Yêu Cầu Công Việc</h3>
+                    <div [id]="'skills_experience_'+jobPost?.jobPostId">
+                      {{ viewRequirePost(jobPost) }}
+                    </div>
+                  </div>
+                </div>
               </div>
+            </div>
           </div>
+        </div>
       </div>
-  
     </div>
   </div>
-  
+</div>
