--- a/src/app/components/layout/dashboard/dashboard.component.html
+++ b/src/app/components/layout/dashboard/dashboard.component.html
@@ -11,21 +11,19 @@
 
     </div>
     <div id="page-inner">
-
-
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-3">
 
                 <div class="card horizontal cardIcon waves-effect waves-dark">
                     <div class="card-image red">
-                        <i class="fa fa-eye fa-5x"></i>
+                        <i class="fa fa-users fa-5x"></i>
                     </div>
                     <div class="card-stacked">
                         <div class="card-content">
-                            <h3>16,150</h3>
+                            <h3>{{ numAccount }}</h3>
                         </div>
                         <div class="card-action">
-                            <strong> Daily Visits</strong>
+                            <strong> Lượng nguời dùng hệ thống</strong>
                         </div>
                     </div>
                 </div>
@@ -35,14 +33,14 @@
 
                 <div class="card horizontal cardIcon waves-effect waves-dark">
                     <div class="card-image orange">
-                        <i class="fa fa-shopping-cart fa-5x"></i>
+                        <i class="fa fa-bell-o fa-5x" aria-hidden="true"></i>
                     </div>
                     <div class="card-stacked">
                         <div class="card-content">
-                            <h3>25,550</h3>
+                            <h3>{{ numPostWaitCensor }}</h3>
                         </div>
                         <div class="card-action">
-                            <strong> Sales</strong>
+                            <strong> Lượng bài đăng chờ phê duyệt</strong>
                         </div>
                     </div>
                 </div>
@@ -51,14 +49,14 @@
 
                 <div class="card horizontal cardIcon waves-effect waves-dark">
                     <div class="card-image blue">
-                        <i class="fa fa-comments fa-5x"></i>
+                        <i class="fa fa-eye fa-5x" aria-hidden="true"></i>
                     </div>
                     <div class="card-stacked">
                         <div class="card-content">
-                            <h3>11,225</h3>
+                            <h3>{{ numPostShow }}</h3>
                         </div>
                         <div class="card-action">
-                            <strong> Comments</strong>
+                            <strong> Lượng bài đăng đang hiển thị</strong>
                         </div>
                     </div>
                 </div>
@@ -68,14 +66,14 @@
 
                 <div class="card horizontal cardIcon waves-effect waves-dark">
                     <div class="card-image">
-                        <i class="fa fa-users fa-5x"></i>
+                        <i class="fa fa-table fa-5x"></i>
                     </div>
                     <div class="card-stacked">
                         <div class="card-content">
-                            <h3>72,525</h3>
+                            <h3>{{ numPosition }}</h3>
                         </div>
                         <div class="card-action">
-                            <strong> No. of Visits</strong>
+                            <strong> Lượng vị trí công việc</strong>
                         </div>
                     </div>
                 </div>
@@ -83,7 +81,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="card">
                     <div class="card-image">
@@ -94,7 +92,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- /. ROW  -->
     </div>
     <!-- /. PAGE INNER  -->
