--- a/src/app/components/layout/job-post/job-post.component.html
+++ b/src/app/components/layout/job-post/job-post.component.html
@@ -1,203 +1,72 @@
 <div id="page-wrapper">
-    <div class="header">
-      <h1 class="page-header">
-        Quản lý bài đăng
-      </h1>
-      <ol class="breadcrumb">
-        <li><a [routerLink]="['/sale-post']">Quản lý bài đăng</a></li>
-        <li><a class="active">Phê duyệt bài đăng</a></li>
-      </ol>
-    </div>
-    <div id="page-inner">
-      <div class="row">
-          <div class="col-md-12">
-              <div class="panel panel-default">
-                  <div class="panel-body">
-                      <div class="col-sm-12">
-                          <hr>
-                          <div class="newpost-header">
-                              <div class="col-sm-8">
-                                  <label>Account:&nbsp;</label>
-                                  <span>adfs sadf ád</span>
-                                  &nbsp;&nbsp;
-                                  <label>Time Post:&nbsp;</label>
-                                  <span>asd fsadf sadfs a</span>
-                              </div>
-  
-                              <div class="clear-fix"></div>
-                             
-                              <div class="col-sm-4 text-right">
-                                  <button  type="button" class="btn btn-default">Phê duyệt</button>
-                                  &nbsp;
-                                  <button  type="button" class="btn btn-danger">Xóa</button>
-                                </div>
-                          </div>
-  
-                          <form class="form-horizontal">
-                            <!--review post-->
-                            <div class="review_post">
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Chuyên mục:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_cate">
-                                    asdf asdfsdaf ádf
-                                  </span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Tỉnh/Thành:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_area">asd asdf ádf</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Tiêu đề:</label>
-                                <div class="col-sm-9">
-                                  <span class="po_title">asdfadsf asd f</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Giá:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_price">SADFasdf sad</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Người liên hệ:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_fullname">qwer sdfasdf qwesadf sadf </span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Số di động:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_phone">1234v12 41243</span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Địa chỉ:</label>
-                                <div class="col-sm-9">
-                                  <span class="re_po_address">
-                                    adf asd fasdf asdf à asdf sad
-                                  </span>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Nội dung:</label>
-                                <div class="col-sm-9">
-                                  <pre
-                                    class="content_format_pre">sdf asdf asdf asdf sdaf sadas </pre>
-                                </div>
-                              </div>
-                              <div class="form-group">
-                                <label class="col-sm-3 control-label">Hình ảnh:</label>
-                                <!-- <div class="col-sm-9">
-                                  <ul class="ul_pic">
-                                    <li *ngFor="let img of censorPost.imageDTOs" >
-                                      <img [src]="config.urlGetImage + img.imageName" [alt]="img.imageName"
-                                        width="100" height="100">
-                                    </li>
-                                  </ul>
-                                </div> -->
-                              </div>
-                            </div>
-                          </form>
-                      </div>
-                      <div class="col-sm-12">
-                        <hr>
-                        <div class="newpost-header">
-                            <div class="col-sm-8">
-                                <label>Account:&nbsp;</label>
-                                <span>adfs sadf ád</span>
-                                &nbsp;&nbsp;
-                                <label>Time Post:&nbsp;</label>
-                                <span>asd fsadf sadfs a</span>
-                            </div>
+  <div class="header">
+    <h1 class="page-header">
+      Quản lý bài đăng đã phê duyệt
+    </h1>
 
-                            <div class="clear-fix"></div>
-                           
-                            <div class="col-sm-4 text-right">
-                                <button  type="button" class="btn btn-default">Phê duyệt</button>
-                                &nbsp;
-                                <button  type="button" class="btn btn-danger">Xóa</button>
-                              </div>
-                        </div>
-
-                        <form class="form-horizontal">
-                          <!--review post-->
-                          <div class="review_post">
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Chuyên mục:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_cate">
-                                  asdf asdfsdaf ádf
-                                </span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Tỉnh/Thành:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_area">asd asdf ádf</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Tiêu đề:</label>
-                              <div class="col-sm-9">
-                                <span class="po_title">asdfadsf asd f</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Giá:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_price">SADFasdf sad</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Người liên hệ:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_fullname">qwer sdfasdf qwesadf sadf </span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Số di động:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_phone">1234v12 41243</span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Địa chỉ:</label>
-                              <div class="col-sm-9">
-                                <span class="re_po_address">
-                                  adf asd fasdf asdf à asdf sad
-                                </span>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Nội dung:</label>
-                              <div class="col-sm-9">
-                                <pre
-                                  class="content_format_pre">sdf asdf asdf asdf sdaf sadas </pre>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="col-sm-3 control-label">Hình ảnh:</label>
-                              <!-- <div class="col-sm-9">
-                                <ul class="ul_pic">
-                                  <li *ngFor="let img of censorPost.imageDTOs" >
-                                    <img [src]="config.urlGetImage + img.imageName" [alt]="img.imageName"
-                                      width="100" height="100">
-                                  </li>
-                                </ul>
-                              </div> -->
-                            </div>
-                          </div>
-                        </form>
-                    </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  
-    </div>
   </div>
-  
+
+  <div id="page-inner">
+
+    <div class="row">
+      <div class="col-md-12">
+        <!-- Advanced Tables -->
+        <div class="card">
+          <div class="card-action">
+            Danh sách bài đăng đã phê duyệt
+          </div>
+          <div class="card-content row">
+            <div class="col-sm-6">
+              <div class="input-field">
+                <input id="search" type="text" [(ngModel)]="filter" name="filter" class="form-control input-sm">
+                <label for="search">Nhập tên thông tin cần tìm kiếm</label>
+              </div>
+              <div style="clear:both"></div>
+            </div>
+           
+            <div class="table-responsive col-sm-12">
+              <table class="table table-striped table-bordered table-hover" id="dataTables-users">
+                <thead>
+                  <tr>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('employerName')">Tên công ty</th>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('jobTitle')">Tiêu đề bài đăng</th>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('timeCreate')">Ngày tạo</th>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('jobPosition')">Vị trí tuyển</th>
+                    <th class="text-center">Thao tác</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr [class]="(i%2==0) ? 'odd gradeX' : 'even gradeX'"
+                    *ngFor="let jobPost of jobPosts | orderBy: key : reverse | filter:filter | paginate: { itemsPerPage: 10, currentPage: p }; let i = index">
+                    <td>{{ jobPost?.employerResumeDTO?.employerName }}</td>
+                    <td>{{ jobPost?.jobTitle }}</td>
+                    <td class="center">{{ jobPost?.createPostTime | date: "dd/MM/yyyy" }}</td>
+                    <td>
+                      {{ jobPost?.jobPositionEntity?.jobPositionName }}
+                    </td>
+                    <td class="center section-action">
+                      <i class="fa fa-eye text-info" title="xem chi tiết" aria-hidden="true" (click)="viewDetail(jobPost)"></i>
+                      <!--<i class="fa fa-pencil-square-o text-primary" title="chỉnh sửa" aria-hidden="true"></i>
+                      <i class="fa fa-unlock text-warning" title="khóa tài khoản" aria-hidden="true"></i> -->
+                      <!-- <i class="fa fa-trash-o text-danger" (click)="deleteAccount(account?.accountId)" title="xóa tài khoản" aria-hidden="true"></i> -->
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-sm-6 text-left">
+              <p>Tổng số bản ghi: {{ jobPosts?.length }}</p>
+            </div>
+            <div class="col-sm-6" style="text-align: right;">
+              <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            </div>
+          </div>
+        </div>
+        <!--End Advanced Tables -->
+      </div>
+    </div>
+    <!-- /. ROW  -->
+  </div>
+  <!-- /. PAGE INNER  -->
+</div>
+<!-- /. PAGE WRAPPER  -->
